--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -59,6 +59,32 @@
 
 <script>
 
+const playSound =  (e) => {
+
+  const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`)
+  const key = document.querySelector(`.key[data-key="${e.keyCode}"]`)
+  
+  if (!audio)return
+
+  audio.currentTime = 0
+  audio.play()
+
+  key.classList.add('playing')
+
+}
+
+window.addEventListener('keydown', playSound)
+
+const keys = document.querySelectorAll('.key')
+
+function removeTransition(e){
+  if (e.propertyName !=='transform') return
+  console.log(e.propertyName)
+  this.classList.remove('playing')
+}
+
+keys.forEach(key => key.addEventListener('transitionend', removeTransition))
+
 </script>
 
 
