--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -62,12 +62,49 @@
       background: black;
       position: absolute;
       top: 50%;
+      transform-origin: 100%;
+      transform: rotate(90deg);
+      /* transition: all 0.05s; */
+      transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
+    }
+
+    .second-hand {
+      opacity: 50%;
+    }
+
+    .hour-hand {
+      width: 50%;
     }
 
   </style>
 
-  <script>
 
+  <script>
+    const secondHand = document.querySelector('.second-hand')
+    const minHand = document.querySelector('.min-hand')
+    const hoursHand = document.querySelector('.hour-hand')
+
+    function setDate(){
+      const now = new Date()
+
+      const seconds = now.getSeconds()
+      const secondsDegree = (seconds/60)*360+90
+
+      const minutes = now.getMinutes()
+      const minutesDegree = (minutes/60)*360+90
+
+      const hours = now.getHours()
+      const hoursDegree = (hours/12)*360+90
+
+      secondHand.style.transform = `rotate(${secondsDegree}deg)`
+      minHand.style.transform = `rotate(${minutesDegree}deg)`
+      hoursHand.style.transform = `rotate(${hoursDegree}deg)`
+
+      console.log(seconds)
+      // console.log(secondsDegree)
+    }
+
+    setInterval(setDate, 1000)
 
   </script>
 </body>
